[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-roadmap"
version = "0.1.0"
description = "Visualize JIRA initiative roadmaps on a timeline"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "jira>=3.5.0",
    "tenacity>=8.2.0",
    "tomli-w>=1.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_roadmap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
